@@ -5,6 +5,7 @@
 25-Nov-2002
 ~~~~~~~~~~~
 Added widget to test mouse double-click speed (suggested by Tony Houghton).
+Added Halt, Reboot and Sleep buttons (requested by lots of people!).
 
 05-Nov-2002
 ~~~~~~~~~~~
